Revert "Update API to use IFileForm and comment on the frontend where it doesn't work"
This reverts commit ed763572644fa8649c30d36d937a49e8f6eec7af.
